--- a/SampleMvcApplication/SampleMvcApplication/SampleMvcApplication.csproj
+++ b/SampleMvcApplication/SampleMvcApplication/SampleMvcApplication.csproj
@@ -106,8 +106,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
-    <Reference Include="WebApplication_GetDate">
-      <HintPath>..\..\SubModule_23092015Repo\WebApplication_SubModule\WebApplication_GetDate\bin\WebApplication_GetDate.dll</HintPath>
+    <Reference Include="WebApplication_GetDate, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\SubModule2909\WebApplication_SubModule\WebApplication_GetDate\bin\WebApplication_GetDate.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
